Fixed some small design/layout issues

--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ button {
     display: inline;
     font-size: 11.5px;
     font-weight: bold;
-    width: 86px;
+    width: 82px;
     opacity: 1;
     border: none;
     border-top-right-radius: 25px;
